<resources>
    <string name="app_name">ExerciseTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="inn_out_fragment_label">Type aktivitet</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="klar_kom_i_form">Gjør deg klar til å komme i form!</string>
    <string name="registrer_ny_bruker">Registrer ny bruker</string>
    <string name="first_name">Fornavn</string>
    <string name="birth_year">Fødselsår</string>
    <string name="email">Epost</string>
    <string name="register_text">Registrer deg for å komme i gang med din treningsplan:</string>
    <string name="last_name">Etternavn</string>
    <string name="phone_number">Mobilnummer</string>
    <string name="helper_text_required">Påkrevd felt*</string>
    <string name="btn_outdoor">Utendørs</string>
    <string name="btn_indoor">Innendørs</string>
    <string name="text_choose_activity">Velg type aktivitet du vil registrere</string>
    <string name="textview_indoor">Innendørsaktivitet</string>
    <string name="textview_outdoor">Utendørsaktivitet</string>
    <string name="button_back">Tilbake</string>
    <string name="register_new_program">Registrer nytt program:</string>
    <string name="description">Beskrivelse</string>
    <string name="program_name">Programnavn</string>
    <string name="use_timer">Bruke tidtaker?</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="add_exercises">Legg til øvelser</string>
    <string name="create_new_exercise">Opprett ny øvelse</string>
    <string name="no_registered_exercises">Du har ikke lagret noen øvelser. Opprett ny øvelse</string>
    <string name="take_new_picture">Ta bilde</string>
    <string name="select_from_gallery">Fotorull</string>
    <string name="my_programs">Mine treningsprogram</string>
    <string name="nav_my_exercises">Mine øvelser</string>
    <string name="nav_logout">Logg ut</string>
    <string name="user_program_name">Program navn</string>
    <string name="app_program_type_description">Program beskrivelse</string>
    <string name="personal_description">Hvordan følte du deg?</string>
    <string name="program_exercises">Programøvelser:</string>
    <string name="session_statistics">Treningsstatistikk</string>
    <string name="registrer_new_program">Registrer nytt program</string>
    <string name="you_have_no_sessions">Du har ikke registrert noen treningsøkter enda. Kom i gang nå!</string>
    <string name="nav_my_sessions">Mine treningsøkter</string>
    <string name="tv_no_exercises">Du har ikke registrert noen øvelser enda. Opprett ny øvelse for å komme i gang,</string>
    <string name="tc_choose_exercises">Legg til øvelser:</string>
    <string name="bt_save_program">Lagre Program</string>
    <string name="bt_my_programs">Mine treningsprogram</string>
    <string name="tv_bruke_gps">Bruke GPS?</string>
    <string name="tv_timing_text">Timing: %s</string>
    <string name="create_new_program">Lag Nytt Program</string>
    <string name="btn_delete_program">Slett Program</string>
    <string name="menu_create_new">Opprett Ny</string>
    <string name="new_program">Nytt Program</string>
    <string name="new_session">Start et Program</string>
    <string name="new_exercise">Ny Øvelse</string>

    <!-- TITLES -->
    <string name="title_login">Velkommen</string>
    <string name="title_my_programs">Mine Program</string>
    <string name="title_my_statistics">Mine Øvelser</string>
    <string name="title_my_exercises">Exercise Tracker</string>
    <string name="title_new_exercise">Ny Øvelse</string>
    <string name="title_new_program">Nytt Program</string>
    <string name="title_program_details">Programdetaljer</string>
    <string name="title_program_session">Aktiv Økt</string>
    <string name="title_session_details">Treningsdata</string>
    <string name="title_program_type">Programtype</string>
    <string name="title_second_fragment">Exercise Tracker</string>
    <string name="lastSessions">Dine siste treningsøkter</string>
    <string name="welcomeMsg">"God dag, %s"</string>
    <string name="last7days">7 dager</string>
    <string name="count7days">%s stykk</string>
    <string name="time7days">%s</string>
    <string name="timeScale">Historikk tidsintervall</string>
    <string name="sessionCount">Total antall treningsøkter</string>
    <string name="trainingTime">%s</string>
    <string name="trainingTimeText">Total treningstid (hh:mm:ss)</string>
    <string name="last30days">30 dager</string>
    <string name="time30days">%s</string>
    <string name="count30days">%s stykk</string>
    <string name="lastWeek">Denne uken</string>
    <string name="timeWeek">%s</string>
    <string name="countWeek">%s stykk</string>
    <string name="lastMonth">Denne måneden</string>
    <string name="timeMonth">%s</string>
    <string name="countMonth">%s stykk</string>
    <string name="lastYear">I år</string>
    <string name="timeYear">%s</string>
    <string name="countYear">%s stykk</string>
    <string name="newSessionButton">Registrer treningsøkt</string>
    <string name="userStats">Treningshistorikk</string>
    <string name="totalDistance"> %skm</string>
    <string name="sessionProgramName"> %s</string>
    <string name="sessionHeight"> %s moh.</string>
    <string name="sessionSpeed">%s km/t</string>
    <string name="sessionSpeedMax">%s km/t</string>
    <string name="sessionSpeedAvg">%s km/t</string>
    <string name="button_update_exercise">Oppdater Øvelse</string>
    <string name="button_update_program">Oppdater Program</string>
    <string name="home">Hjem</string>
    <string name="distance">Distanse</string>
    <string name="time">Tid</string>
    <string name="height">Høyde</string>
    <string name="refresh_data">Oppdater data</string>
    <string name="delete_exercise">Slett Øvelse</string>
    <string name="confirmation_delete_exercise">Vil du slette øvelsen for godt?</string>
    <string name="cancel">Avbryt</string>
    <string name="canceled">Avbrutt</string>
    <string name="delete_program">Slett Program</string>
    <string name="confirmation_delete_program">Vil du slette programmet for godt?</string>
    <string name="failed_to_load_exercises">Kunne ikke laste øvelser</string>
    <string name="average">Average</string>
    <string name="max">Max</string>
    <string name="start">Start</string>
    <string name="edit">Rediger</string>
    <string name="startupLoading">Laster inn ...</string>
    <string name="completed_sessions">Gjennomførte økter</string>
    <string name="update_program">Oppdater Program</string>
    <string name="fart">Fart</string>
    <string name="delete">Slett</string>
    <string name="replay_Session">Gjenta økt</string>
    <string name="exercises">Treningsøvelser</string>
    <string name="trainning_statistics">Treningsstatistikk</string>
    <string name="timing_yes">Tidtaking: Ja</string>
    <string name="timing_no">Tidtaking: Nei</string>

</resources>