<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.exercisetracker.MainActivity">
    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
        -->
    <item
        android:id="@+id/nav_my_statistics"
        android:title="@string/nav_my_sessions" />
    <item
        android:id="@+id/nav_my_exercises"
        android:title="@string/nav_my_exercises" />
    <item
        android:id="@+id/action_my_programs"
        android:title="@string/my_programs" />
    <item android:id="@+id/new_session"
        android:title="@string/new_session" />
    <item
        android:id="@+id/create_new"
        android:icon="@drawable/add_img"
        android:title="@string/menu_create_new"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/new_program"
                android:title="@string/program" />
            <item android:id="@+id/new_exercise"
                android:title="@string/new_exercise" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout" />
</menu>