<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="programtype"
            type="com.example.exercisetracker.db.AppProgramType"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewProgramFragment">


        <ImageView
            android:id="@+id/program_type_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/side_margin"
            android:src="@{programtype.icon}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/runner_img"/>

        <TextView
            android:id="@+id/tv_create_new_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_new_program"
            android:layout_margin="@dimen/side_margin"
            android:textSize="@dimen/header_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/program_type_image"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/program_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:hint="@string/program_name"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_new_program">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/program_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="21"/>
            <!--android:afterTextChanged=""-->
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/program_descript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginTop="@dimen/side_margin"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:hint="@string/description"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/program_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/program_descript_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lines="10"
                android:maxLines="10"
                android:maxLength="501"/>
            <!--android:afterTextChanged=""-->
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_use_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_timer"
            android:layout_margin="@dimen/side_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/program_descript"/>

        <RadioGroup
            android:id="@+id/timer_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/tv_use_timer"
            app:layout_constraintTop_toBottomOf="@id/program_descript">

            <RadioButton
                android:id="@+id/rb_option_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginEnd="@dimen/margin_between_elements"/>

            <RadioButton
                android:id="@+id/rb_option_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_marginStart="@dimen/margin_between_elements"/>

        </RadioGroup>


        <Button
            android:id="@+id/button_save_program"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bt_save_program"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            app:layout_constraintBottom_toTopOf="@id/button_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <!-- Delete button is set to visible when navigating via "edit-program" option in myPrograms-->
        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_program"
            android:layout_marginTop="@dimen/margin_between_elements"
            android:layout_marginBottom="@dimen/margin_between_elements"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginEnd="@dimen/side_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>