<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/personal_description_edit_text"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/user_program_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/app_program_type_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_program_type_description"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/user_program_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_program_name"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:id="@+id/tv_use_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bruke_gps"
                android:layout_margin="@dimen/margin_between_elements"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_program_name"/>

            <RadioGroup
                android:id="@+id/gps_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/tv_use_gps"
                app:layout_constraintTop_toBottomOf="@id/user_program_name">

                <RadioButton
                    android:id="@+id/rb_gps_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_marginEnd="@dimen/margin_between_elements"/>

                <RadioButton
                    android:id="@+id/rb_gps_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_marginStart="@dimen/margin_between_elements"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/exercises_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                tools:listitem="@layout/exercise_item"
                xmlns:tools="http://schemas.android.com/tools">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/personal_description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_container"
        android:hint="@string/personal_description" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/start_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start treningsøkt" />

        </LinearLayout>

        <Button
            android:id="@+id/save_workout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lagre treningsøkt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</RelativeLayout>