<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/side_margin"
    android:layout_marginEnd="@dimen/side_margin"
    android:layout_marginTop="@dimen/side_margin"
    tools:context=".MyStatisticsFragment">

    <TextView
        android:id="@+id/session_data_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/session_statistics"
        android:textSize="@dimen/header_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_no_sessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_no_sessions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_register_new"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/bt_register_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrer_new_program"
        android:layout_marginBottom="@dimen/margin_between_elements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/session_data_header"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_register_new"
        tools:listitem="@layout/statistics_item" />

</androidx.constraintlayout.widget.ConstraintLayout>